[gd_scene load_steps=7 format=3 uid="uid://d4ak0fy4gsv6v"]

[ext_resource type="Script" path="res://Events/event_choice/event_pick.gd" id="1_nc80d"]
[ext_resource type="Texture2D" uid="uid://djmrox3cqnntc" path="res://icon.svg" id="2_p76l4"]
[ext_resource type="PackedScene" uid="uid://cgeo8n0mg0x68" path="res://Battle/player/player_stats_ui.tscn" id="3_1eapr"]

[sub_resource type="LabelSettings" id="LabelSettings_8kbc4"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2c6xu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0utn"]
bg_color = Color(0.2, 0.2, 0.2, 0.858824)

[node name="EventPick" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nc80d")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="EventPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventPicture" type="TextureRect" parent="EventPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_p76l4")
stretch_mode = 5

[node name="EventNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_right = 166.0
offset_bottom = 37.0
grow_horizontal = 2
text = "EVENT NAME"
label_settings = SubResource("LabelSettings_8kbc4")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="EventNameLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="ChoiceContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 952.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="ChoiceContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2c6xu")

[node name="Label" type="Label" parent="ChoiceContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MAKE YOUR CHOICE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NarrativeLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(260, 0)
layout_mode = 1
offset_left = 12.0
offset_top = 46.0
offset_right = 272.0
offset_bottom = 72.0
text = "This should say something else."
autowrap_mode = 3
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="NarrativeLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i0utn")

[node name="PlayerStatsUI" parent="." instance=ExtResource("3_1eapr")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_right = 1152.0
grow_horizontal = 1
grow_vertical = 0
metadata/_edit_group_ = true
